test/program1.ERR
ENDIF
Error in line 4: An IF | ELSE | ENDIF statement is missing.
