test/program1.prg
IF qwe
ELSE
ENDIF
ENDIF